# Document-ingestion

./: .env.example  .gitignore  DASHBOARD_COMPLETE.md  DASHBOARD_QUICK_START.md  DASHBOARD_README.md  DASHBOARD_TEST_REPORT.md  MULTI_FORMAT_TEST_RESULTS.md  Makefile  OCR_UPGRADE_REPORT.md  QUICK_START.md  README.md  TEST_RESULTS.md  alembic.ini  analyze_duplicates.py  cleanup_ghosts.py  debug_passport_format.py  docker-compose.yml  generate_handwritten.py  generate_identity_docs.py  generate_math_doc.py  pyproject.toml  pytest.ini  run_dashboard_tests.py  start.sh  test_all_identity_docs.py  test_api_integration.py  test_classification.py  test_e2e.py  test_handwritten.py  test_improved_extraction.py  test_improved_verification.py  test_insurance_card.py  test_live_api.py  test_multi_format.py  test_ocr_validation.py  test_passport_verification.py  test_results_final.txt  test_robustness.py  test_verification.py  🗺️ Master Roadmap: Intelligent Document.md
alembic/: env.py
alembic/versions/: 001_initial.py  20251230_1719_82fb2032ae16_create_tables_with_string_enums.py  20251230_2207_8d0d82f26562_add_created_updated_fields.py
dashboard/: app.py
docker/: Dockerfile  Dockerfile.worker  init.sql
src/: main.py
src/api/: __init__.py  dashboard.py  documents.py  search.py
src/core/: __init__.py  config.py  database.py
src/models/: __init__.py  document.py  enums.py
src/schemas/: __init__.py  document.py
src/services/: __init__.py
src/templates/: base.html  dashboard.html  document_detail.html  documents.html  error.html  health.html  upload.html
src/utils/: __init__.py  (+2 more)
test_multi_format/: medical_record.docx  receipt.md
tests/: conftest.py  test_api.py  test_classification.py  test_dashboard_api.py  test_dashboard_e2e.py  test_dashboard_html.py  test_dashboard_snapshots.py  test_extraction.py  test_preprocessing.py
(+29 files in other folders)
